# sora-api

./: README.md  package.json  pyproject.toml
examples/curl/: generate_video.sh
examples/go/: main.go
examples/java/: SoraApiExample.java
examples/javascript/: generate_video.js
examples/php/: generate_video.php
examples/python/: generate_video.py
src/: index.d.ts  index.js
src/mountsea_sora/: __init__.py  client.py
