[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mountsea-sora"
version = "1.0.0"
description = "Python SDK for Sora 2 API - Generate videos with OpenAI Sora 2 via Mountsea AI. The cheapest Sora API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Mountsea AI", email = "support@mountsea.ai"}]
keywords = [
    "sora", "sora-api", "sora-2", "sora2", "openai-sora",
    "text-to-video", "video-generation", "ai-video",
    "mountsea", "mountsea-ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://shanhaiapi.com/zh/"
Documentation = "https://docs.mountsea.ai/api-reference/sora/introduction"
Repository = "https://github.com/mountsea-ai/sora-api"
Issues = "https://github.com/mountsea-ai/sora-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

